Rename "Gamma and factorial.." to "Gamma and Factorial..."
It's the title of a section, so "factorial" should be capitalized.

--- a/doc/info/include-maxima.texi.in
+++ b/doc/info/include-maxima.texi.in
@@ -320,7 +320,7 @@ Special Functions
 * Introduction to Special Functions:: 
 * Bessel Functions::
 * Airy Functions::
-* Gamma and factorial Functions::
+* Gamma and Factorial Functions::
 * Exponential Integrals::
 * Error Function::
 * Struve Functions::
